
syntax = "proto3";
// system_user_post 系统用户职位
package user;
option go_package = "./user";
import "google/protobuf/timestamp.proto";

// SystemUserPostObject 数据对象
message SystemUserPostObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 2; //系统用户 ID
	// @inject_tag: db:"post_id" json:"postId"
	optional int64 post_id = 3; //职位 id
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 4; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 5; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 6; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 7; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 8; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 9; //更新时间
}

// SystemUserPostCustomObject 数据对象
message SystemUserPostCustomObject {
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 1; //系统用户 id
	// @inject_tag: db:"post_ids" json:"postIds"
	optional bytes post_ids = 2; //职位 id
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 3; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 4; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 5; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 6; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 7; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 8; //更新时间
}

// SystemUserPostCreateRequest 创建数据请求
message SystemUserPostCreateRequest {
	SystemUserPostCustomObject data = 1;
}
// SystemUserPostCreateResponse 创建数据响应
message SystemUserPostCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemUserPostListRequest 列表数据
message SystemUserPostListRequest {
	
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 1; // 系统用户 ID
	// @inject_tag: db:"post_id" json:"postId"
	optional int64 post_id = 2; // 职位 id
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 3; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 4; // 删除

}

// SystemUserPostListResponse 数据响应
message SystemUserPostListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemUserPostObject data = 3;
}


// SystemUserPostService 服务
service SystemUserPostService{
	rpc SystemUserPostCreate(SystemUserPostCreateRequest) returns (SystemUserPostCreateResponse);
	rpc SystemUserPostList(SystemUserPostListRequest) returns (SystemUserPostListResponse);
}
